@@ -1,3 +1,0 @@
-Site URL: https://asianporn.li/
-Contact: https://asianporn.li/feedback/
-DMCA: https://asianporn.li/static/dmca/
