@@ -20,7 +20,7 @@ import re
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 
-site = AdultSite('vaginanl', '[COLOR hotpink]Vagina.nl[/COLOR] [COLOR orange](Dutch)[/COLOR]', 'https://vagina.nl/', 'https://m5y8c3q4.ssl.hwcdn.net/img/logo-default.png', 'vaginanl')
+site = AdultSite('vaginanl', '[COLOR hotpink]Vagina.nl[/COLOR] [COLOR orange](Dutch)[/COLOR]', 'https://vagina.nl/', 'https://c749a9571b.mjedge.net/img/logo-default.png', 'vaginanl')
 
 
 @site.register(default_mode=True)
