@@ -3,3 +3,4 @@
 - koreeanpornmovie - fix playback
 - fulltaboo - fix playback
 - watcherotic - new site
+- asianporn - removed (redirects to kissjav)
